--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -1,6 +1,6 @@
 /*+---------------------------------------------------------------------+*/
-/*+                      author：赵金福 - 赵鑫                           +*/
-/*+                      Creation time：2020/05/15                      +*/
+/*+                      author：赵金福                        +*/
+/*+                      Creation time：2020/07/03                      +*/
 /*+                      Effect：初始化css样式，规定开发文本              +*/
 /*+---------------------------------------------------------------------+*/
 
